# tesseract-ocr-app

./: README.md
src/docs/tessdata/: ReadMe.txt
src/tesseract-ocr-app/: CMakeLists.txt
src/tesseract-ocr-app/leptonica-1.79.0/: ReadMe.txt
src/tesseract-ocr-app/libicu4c/: ReadMe.txt
src/tesseract-ocr-app/opencv-4.5.1/: ReadMe.txt
src/tesseract-ocr-app/tesseract-ocr/: ReadMe.txt
src/tesseract-ocr-app/tesseract-ocr-demo/: CMakeLists.txt  ocr-app.cpp  tesseract-ocr-demo.cpp  tesseract-ocr-demo.def  tesseract-ocr-demo.h  tesseract-ocr-demo.rc
src/tesseract-ocr-app/tesseract-ocr-demo/res/: ReadMe.txt
